# smooth_criminal

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.txt  MANIFEST.in  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
binder/: requirements.txt
docs/: api.rst  conf.py  contributing.rst  index.rst  usage.rst
examples/: benchmark_streamlit.py  requirements.txt
scripts/: example_auto_boost.py  example_flet_dashboard.py  example_jam.py  example_score.py  example_smooth.py  example_suggest.py
smooth_criminal/: __init__.py  analizer.py  benchmark.py  cli.py  core.py  dashboard.py  memory.py
smooth_criminal/flet_app/: components.py  main.py  utils.py  views.py
tests/: conftest.py  sample_funcs.py  test_auto_boost.py  test_auto_boost_memory.py  test_bad.py  test_bad_and_dangerous.py  test_basic.py  test_beat_it.py  test_benchmark.py  test_black_or_white.py  test_build_summary.py  test_clear_history.py  test_cli_jam_test.py  test_cli_suggest.py  test_component_building.py  test_dangerous.py  test_dashboard.py  test_export_file_naming.py  test_export_history.py  test_graph_data.py  test_guvectorized.py  test_jam.py  test_jam_async.py  test_jam_process.py  test_memory_backends.py  test_mj_mode.py  test_moonwalk.py  test_profile.py  test_refresh_data.py  test_score.py  test_smooth.py  test_suggestions.py  test_thriller.py  test_utils.py  test_vectorized.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
(+3 files in other folders)
